unpackaged/main/default/objects/Account/fields/Account_Funding_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Funding_Notes__c</fullName>
    <label>Annual Funding Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>