unpackaged/main/default/objects/Account/fields/Accreditation__c.field-meta.xml
<CustomField>
    <fullName>Accreditation__c</fullName>
    <label>Accreditation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suitable</fullName>
            </value>
            <value>
                <fullName>Accredited</fullName>
            </value>
            <value>
                <fullName>Qualified Purchaser</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
                <default>true</default>
                <label>Not Qualified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>