unpackaged/main/default/objects/Account/fields/Additional_CP_Notes_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Additional_CP_Notes_Restrictions__c</fullName>
    <label>Additional CP Notes/Restrictions</label>
    <type>TextArea</type>
</CustomField>