unpackaged/main/default/objects/Account/fields/Additional_IMA_Notes_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Additional_IMA_Notes_Restrictions__c</fullName>
    <label>Additional IMA Notes/Restrictions</label>
    <type>TextArea</type>
</CustomField>