unpackaged/main/default/objects/Account/fields/Address_Notes__c.field-meta.xml
<CustomField>
    <fullName>Address_Notes__c</fullName>
    <label>Address Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>