unpackaged/main/default/objects/Account/fields/Advisor_Group__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Advisor_Group__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Diversify_Related_Persons</relationshipName>
    <type>Lookup</type>
</CustomField>