unpackaged/main/default/objects/Account/fields/Advisor_ID__c.field-meta.xml
<CustomField>
    <fullName>Advisor_ID__c</fullName>
    <label>Advisor ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1000</fullName>
            </value>
            <value>
                <fullName>A1001</fullName>
            </value>
            <value>
                <fullName>A1002</fullName>
            </value>
            <value>
                <fullName>A1003</fullName>
            </value>
            <value>
                <fullName>A1004</fullName>
            </value>
            <value>
                <fullName>A1005</fullName>
            </value>
            <value>
                <fullName>A1006</fullName>
            </value>
            <value>
                <fullName>A1007</fullName>
            </value>
            <value>
                <fullName>A1008</fullName>
            </value>
            <value>
                <fullName>A1009</fullName>
            </value>
            <value>
                <fullName>A1010</fullName>
            </value>
            <value>
                <fullName>A1011</fullName>
            </value>
            <value>
                <fullName>A1012</fullName>
            </value>
            <value>
                <fullName>A1013</fullName>
            </value>
            <value>
                <fullName>A1014</fullName>
            </value>
            <value>
                <fullName>A1015</fullName>
            </value>
            <value>
                <fullName>A1016</fullName>
            </value>
            <value>
                <fullName>A1017</fullName>
            </value>
            <value>
                <fullName>A1018</fullName>
            </value>
            <value>
                <fullName>A1019</fullName>
            </value>
            <value>
                <fullName>A1020</fullName>
            </value>
            <value>
                <fullName>A1021</fullName>
            </value>
            <value>
                <fullName>A1022</fullName>
            </value>
            <value>
                <fullName>A1023</fullName>
            </value>
            <value>
                <fullName>A1024</fullName>
            </value>
            <value>
                <fullName>A1025</fullName>
            </value>
            <value>
                <fullName>A1026</fullName>
            </value>
            <value>
                <fullName>A1027</fullName>
            </value>
            <value>
                <fullName>A1028</fullName>
            </value>
            <value>
                <fullName>A1029</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>