unpackaged/main/default/objects/Account/fields/Advisory_Fee__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Fee__c</fullName>
    <label>Advisory Fee</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>