unpackaged/main/default/objects/Account/fields/Affiliation_Platform__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Platform__c</fullName>
    <label>Affiliation Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>