unpackaged/main/default/objects/Account/fields/Alternative_Investments_Experience__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Investments_Experience__c</fullName>
    <inlineHelpText>e.g., REITs, Private Equity, Private Credit, 1031 Exchanges, Oil &amp; Gas</inlineHelpText>
    <label>Alternative Investments Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Experience</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Experienced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>