unpackaged/main/default/objects/Account/fields/AML_Expiration_Date_Maestro__c.field-meta.xml
<CustomField>
    <fullName>AML_Expiration_Date_Maestro__c</fullName>
    <formula>IF(
    ISBLANK(AML_Expiration_Date__c),
    NULL,
 LPAD(TEXT(MONTH( AML_Expiration_Date__c )), 2, &#39;0&#39;) + &#39;/&#39; +
LPAD(TEXT(DAY(AML_Expiration_Date__c)), 2, &#39;0&#39;) + &#39;/&#39; +
TEXT(YEAR(AML_Expiration_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AML Expiration Date</label>
    <type>Text</type>
</CustomField>