unpackaged/main/default/objects/Account/fields/AML_Submitted__c.field-meta.xml
<CustomField>
    <fullName>AML_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is only to know within a flow if an AML Case has already been submitted for this particular person.</description>
    <label>AML Submitted?</label>
    <type>Checkbox</type>
</CustomField>