unpackaged/main/default/objects/Account/fields/Annual_Income_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income_Maestro__c</fullName>
    <formula>SUBSTITUTE(
    SUBSTITUTE(TEXT(  BLANKVALUE(Household__r.Approximate_Annual_Income_All_Sources__c, 1 )), &quot;,&quot;, &quot;&quot;),
    &quot;.&quot;, &quot;&quot;)</formula>
    <label>Annual Income</label>
    <type>Text</type>
</CustomField>