unpackaged/main/default/objects/Account/fields/Annuities_Investment_Years_Experience__c.field-meta.xml
<CustomField>
    <fullName>Annuities_Investment_Years_Experience__c</fullName>
    <label>Annuities Investment Years Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>