unpackaged/main/default/objects/Account/fields/Approval_Process_Dummy_Field__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Dummy_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Process Dummy Field</label>
    <type>Checkbox</type>
</CustomField>