unpackaged/main/default/objects/Account/fields/Approx_Annual_Expenses_All_Sources__c.field-meta.xml
<CustomField>
    <fullName>Approx_Annual_Expenses_All_Sources__c</fullName>
    <label>Approx. Annual Expenses (All Sources)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>