unpackaged/main/default/objects/Account/fields/Approximate_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Net_Worth__c</fullName>
    <label>Approximate Net Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>