unpackaged/main/default/objects/Account/fields/Approximate_Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Total_Assets__c</fullName>
    <label>Approximate Total Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>