unpackaged/main/default/objects/Account/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <label>Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discretionary basis</fullName>
            </value>
            <value>
                <fullName>Non-Discretionary basis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>