unpackaged/main/default/objects/Account/fields/Billing_Address_text_string__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_text_string__c</fullName>
    <formula>IF(Not(ISBLANK(BillingStreet)),BillingStreet +&quot;, &quot; + BillingCity +&quot;, &quot; +  BillingState  +&quot;, &quot; +  BillingPostalCode, &quot;No Billing Address&quot;)</formula>
    <label>Billing Address (text string)</label>
    <type>Text</type>
</CustomField>