unpackaged/main/default/objects/Account/fields/Birthdate_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Maestro__c</fullName>
    <formula>IF(
    ISBLANK(PersonContact.Birthdate),
    NULL,
    LPAD(TEXT(MONTH(PersonContact.Birthdate)), 2, &#39;0&#39;)
    &amp; &#39;/&#39; &amp;
    LPAD(TEXT(DAY(PersonContact.Birthdate)), 2, &#39;0&#39;)
    &amp; &#39;/&#39; &amp;
    TEXT(YEAR(PersonContact.Birthdate))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate</label>
    <type>Text</type>
</CustomField>