unpackaged/main/default/objects/Account/fields/Branch_Code_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code_Maestro__c</fullName>
    <label>Branch Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>