unpackaged/main/default/objects/Account/fields/Business_Sub_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Business_Sub_Type_Other__c</fullName>
    <label>Business Sub-Type - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>