unpackaged/main/default/objects/Account/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>type 1</fullName>
            </value>
            <value>
                <fullName>type 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>