unpackaged/main/default/objects/Account/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COI</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Unclassified</fullName>
            </value>
            <value>
                <fullName>Regulatory Related Party</fullName>
                <isActive>false</isActive>
                <label>Regulatory Related Party</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>