unpackaged/main/default/objects/Account/fields/Count_of_HH_s__c.field-meta.xml
<CustomField>
    <fullName>Count_of_HH_s__c</fullName>
    <label>Count of HH&#39;s</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>