unpackaged/main/default/objects/Account/fields/Customer_Advisor_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Advisor_ID__c</fullName>
    <label>Customer-Advisor ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C10076</fullName>
            </value>
            <value>
                <fullName>C000001</fullName>
            </value>
            <value>
                <fullName>C10001</fullName>
            </value>
            <value>
                <fullName>C10002</fullName>
            </value>
            <value>
                <fullName>C10003</fullName>
            </value>
            <value>
                <fullName>C10004</fullName>
            </value>
            <value>
                <fullName>C10005</fullName>
            </value>
            <value>
                <fullName>C10006</fullName>
            </value>
            <value>
                <fullName>C10007</fullName>
            </value>
            <value>
                <fullName>C10008</fullName>
            </value>
            <value>
                <fullName>C10009</fullName>
            </value>
            <value>
                <fullName>C10010</fullName>
            </value>
            <value>
                <fullName>C10011</fullName>
            </value>
            <value>
                <fullName>C10012</fullName>
            </value>
            <value>
                <fullName>C10013</fullName>
            </value>
            <value>
                <fullName>C10014</fullName>
            </value>
            <value>
                <fullName>C10015</fullName>
            </value>
            <value>
                <fullName>C10016</fullName>
            </value>
            <value>
                <fullName>C10017</fullName>
            </value>
            <value>
                <fullName>C10018</fullName>
            </value>
            <value>
                <fullName>C10019</fullName>
            </value>
            <value>
                <fullName>C10020</fullName>
            </value>
            <value>
                <fullName>C10021</fullName>
            </value>
            <value>
                <fullName>C10022</fullName>
            </value>
            <value>
                <fullName>C10023</fullName>
            </value>
            <value>
                <fullName>C10024</fullName>
            </value>
            <value>
                <fullName>C10025</fullName>
            </value>
            <value>
                <fullName>C10026</fullName>
            </value>
            <value>
                <fullName>C10027</fullName>
            </value>
            <value>
                <fullName>C10028</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>