unpackaged/main/default/objects/Account/fields/Debt_from_Business_Interests__c.field-meta.xml
<CustomField>
    <fullName>Debt_from_Business_Interests__c</fullName>
    <label>Debt from Business Interests</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>