unpackaged/main/default/objects/Account/fields/Debt_Sec_by_Personal_Properties_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Debt_Sec_by_Personal_Properties_Vehicles__c</fullName>
    <label>Debt Sec by Personal Properties/Vehicles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>