unpackaged/main/default/objects/Account/fields/Derivatives_Complex_Products_Experienc__c.field-meta.xml
<CustomField>
    <fullName>Derivatives_Complex_Products_Experienc__c</fullName>
    <inlineHelpText>e.g., Options, Structured Notes</inlineHelpText>
    <label>Derivatives &amp; Complex Products Experienc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Experience</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Experienced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>