unpackaged/main/default/objects/Account/fields/Discretionary_for_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_for_DocuSign__c</fullName>
    <formula>ISPICKVAL(Authority__c, &#39;Discretionary basis&#39;)</formula>
    <label>Discretionary for DocuSign</label>
    <type>Checkbox</type>
</CustomField>