unpackaged/main/default/objects/Account/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <description>Why a prospect was lost. Set alongside Account.Type = Former Prospect. Backed by the shared Disqualified Reason global value set; wealth record types expose only the four wealth reasons.</description>
    <inlineHelpText>Reason this prospect was lost. Set this when you set Account Type to Former Prospect.</inlineHelpText>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Disqualified_Reason</valueSetName>
    </valueSet>
</CustomField>