unpackaged/main/default/objects/Account/fields/DMS_Addendum_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>DMS_Addendum_Signed_Date__c</fullName>
    <label>DMS Addendum Signed Date</label>
    <type>Date</type>
</CustomField>