unpackaged/main/default/objects/Account/fields/DocuSign__c.field-meta.xml
<CustomField>
    <fullName>DocuSign__c</fullName>
    <formula>ISPICKVAL(Fee_Disbursement__c,&#39;Deduct fees for all of my accounts from specific account&#39;)</formula>
    <label>DocuSignDeductFeesFromOneAccount</label>
    <type>Checkbox</type>
</CustomField>