unpackaged/main/default/objects/Account/fields/Docusign_Complete_Text__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Complete_Text__c</fullName>
    <label>Docusign Complete Text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>