unpackaged/main/default/objects/Account/fields/DocuSignDeductFromEachAccount__c.field-meta.xml
<CustomField>
    <fullName>DocuSignDeductFromEachAccount__c</fullName>
    <formula>ISPICKVAL(Fee_Disbursement__c,&#39;Deduct fees directly from each account&#39;)</formula>
    <label>DocuSignDeductFromEachAccount</label>
    <type>Checkbox</type>
</CustomField>