unpackaged/main/default/objects/Account/fields/DocuSignDiscretionary__c.field-meta.xml
<CustomField>
    <fullName>DocuSignDiscretionary__c</fullName>
    <formula>ISPICKVAL(Authority__c, &#39;Discretionary basis&#39;)</formula>
    <label>DocuSignDiscretionary</label>
    <type>Checkbox</type>
</CustomField>