unpackaged/main/default/objects/Account/fields/DocuSignFeeDisbursementAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>DocuSignFeeDisbursementAccountNumber__c</fullName>
    <formula>Fee_Disbursement_Account__r.FinServ__FinancialAccountNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DocuSignFeeDisbursementAccountNumber</label>
    <type>Text</type>
</CustomField>