unpackaged/main/default/objects/Account/fields/DocuSignIOGrowth__c.field-meta.xml
<CustomField>
    <fullName>DocuSignIOGrowth__c</fullName>
    <label>DocuSignIOGrowth</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>