unpackaged/main/default/objects/Account/fields/DocuSignIOIncome__c.field-meta.xml
<CustomField>
    <fullName>DocuSignIOIncome__c</fullName>
    <label>DocuSignIOIncome</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>