unpackaged/main/default/objects/Account/fields/DocuSignIOPreserveWealth__c.field-meta.xml
<CustomField>
    <fullName>DocuSignIOPreserveWealth__c</fullName>
    <label>DocuSignIOPreserveWealth</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>