unpackaged/main/default/objects/Account/fields/DocuSignIOSpeculation__c.field-meta.xml
<CustomField>
    <fullName>DocuSignIOSpeculation__c</fullName>
    <label>DocuSignIOSpeculation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>