unpackaged/main/default/objects/Account/fields/DocuSignLNNot__c.field-meta.xml
<CustomField>
    <fullName>DocuSignLNNot__c</fullName>
    <formula>ISPICKVAL(Liquidity_Needs__c, &#39;Not Important&#39;)</formula>
    <label>DocuSignLNNot</label>
    <type>Checkbox</type>
</CustomField>