unpackaged/main/default/objects/Account/fields/DocuSignLNSomewhat__c.field-meta.xml
<CustomField>
    <fullName>DocuSignLNSomewhat__c</fullName>
    <formula>ISPICKVAL(Liquidity_Needs__c, &#39;Somewhat Important&#39;)</formula>
    <label>DocuSignLNSomewhat</label>
    <type>Checkbox</type>
</CustomField>