unpackaged/main/default/objects/Account/fields/DocuSignRTModerate__c.field-meta.xml
<CustomField>
    <fullName>DocuSignRTModerate__c</fullName>
    <formula>ISPICKVAL(Risk_Tolerance__c,&#39;Moderate&#39;)</formula>
    <label>DocuSignRTModerate</label>
    <type>Checkbox</type>
</CustomField>