unpackaged/main/default/objects/Account/fields/DocuSignTH1__c.field-meta.xml
<CustomField>
    <fullName>DocuSignTH1__c</fullName>
    <formula>ISPICKVAL(Time_Horizon__c,&#39;Less than 1 year&#39;)</formula>
    <label>DocuSignTH1</label>
    <type>Checkbox</type>
</CustomField>