unpackaged/main/default/objects/Account/fields/DocuSignTH1to3__c.field-meta.xml
<CustomField>
    <fullName>DocuSignTH1to3__c</fullName>
    <formula>ISPICKVAL(Time_Horizon__c,&#39;1 to 3 years&#39;)</formula>
    <label>DocuSignTH1to3</label>
    <type>Checkbox</type>
</CustomField>