unpackaged/main/default/objects/Account/fields/DocuSignTH9__c.field-meta.xml
<CustomField>
    <fullName>DocuSignTH9__c</fullName>
    <formula>ISPICKVAL(Time_Horizon__c,&#39;9 years or more&#39;)</formula>
    <label>DocuSignTH9</label>
    <type>Checkbox</type>
</CustomField>