unpackaged/main/default/objects/Account/fields/Donation_in_Kind_Notes__c.field-meta.xml
<CustomField>
    <fullName>Donation_in_Kind_Notes__c</fullName>
    <label>Donation in Kind Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>