unpackaged/main/default/objects/Account/fields/Employer_State__c.field-meta.xml
<CustomField>
    <fullName>Employer_State__c</fullName>
    <label>Employer State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>