unpackaged/main/default/objects/Account/fields/Employing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Employing_Entity__c</fullName>
    <description>Broker Dealer Affiliation - Employing Entity</description>
    <label>Employing Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>