unpackaged/main/default/objects/Account/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revocable Trust</fullName>
            </value>
            <value>
                <fullName>Irrevocable Trust</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>C-Corp</fullName>
            </value>
            <value>
                <fullName>S-Corp</fullName>
            </value>
            <value>
                <fullName>Unincorporated Business</fullName>
            </value>
            <value>
                <fullName>ERISA Retirement Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>