unpackaged/main/default/objects/Account/fields/Fee_bps__c.field-meta.xml
<CustomField>
    <fullName>Fee_bps__c</fullName>
    <label>Fee - bps</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>