unpackaged/main/default/objects/Account/fields/Fee_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Fee_Disbursement__c</fullName>
    <label>Fee Disbursement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deduct fees directly from each account</fullName>
            </value>
            <value>
                <fullName>Deduct fees for all of my accounts from specific account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>