unpackaged/main/default/objects/Account/fields/Fee_Disbursement_Wizard_Account__c.field-meta.xml
<CustomField>
    <fullName>Fee_Disbursement_Wizard_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Disbursement Wizard Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Accounts (Fee Disbursement Wizard Account)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>