unpackaged/main/default/objects/Account/fields/Fee_Flat__c.field-meta.xml
<CustomField>
    <fullName>Fee_Flat__c</fullName>
    <label>Fee - Flat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>