unpackaged/main/default/objects/Account/fields/Flow_Update__c.field-meta.xml
<CustomField>
    <fullName>Flow_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Update</label>
    <type>Checkbox</type>
</CustomField>