unpackaged/main/default/objects/Account/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>Next follow-up date for a nurtured prospect. Required when Prospect Status is Nurturing. Mirrors Lead.Follow_Up_Date__c.</description>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>