unpackaged/main/default/objects/Account/fields/Has_FAs_that_are_DMS__c.field-meta.xml
<CustomField>
    <fullName>Has_FAs_that_are_DMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has FAs that are DMS?</label>
    <type>Checkbox</type>
</CustomField>