unpackaged/main/default/objects/Account/fields/Home_Phone_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone_Maestro__c</fullName>
    <formula>SUBSTITUTE(
    SUBSTITUTE(
        SUBSTITUTE(
            SUBSTITUTE(
                SUBSTITUTE(
                     PersonHomePhone, 
                    &quot; &quot;, &quot;&quot;
                ), 
                &quot;-&quot;, &quot;&quot;
            ), 
            &quot;(&quot;, &quot;&quot;
        ), 
        &quot;)&quot;, &quot;&quot;
    ),
    &quot;.&quot;, &quot;&quot;
)</formula>
    <label>Home Phone</label>
    <type>Text</type>
</CustomField>