unpackaged/main/default/objects/Account/fields/Household_Mailing_Name__c.field-meta.xml
<CustomField>
    <fullName>Household_Mailing_Name__c</fullName>
    <label>Household Mailing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>