unpackaged/main/default/objects/Account/fields/IMA_Ex_A_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>IMA_Ex_A_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box should be checked when a home office employee has verified that the client has signed a signed IMA Exhibit A on file and the fee on the form matches the value in Salesforce.</description>
    <label>IMA Ex A Reviewed</label>
    <type>Checkbox</type>
</CustomField>