unpackaged/main/default/objects/Account/fields/IMA_Ex_B_Ops_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>IMA_Ex_B_Ops_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IMA Ex B Ops Reviewed</label>
    <type>Checkbox</type>
</CustomField>