unpackaged/main/default/objects/Account/fields/IMA_Fee_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>IMA_Fee_Disbursement__c</fullName>
    <label>IMA Fee Disbursement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deduct fees directly from each account</fullName>
                <default>true</default>
                <label>Deduct fees directly from each account</label>
            </value>
            <value>
                <fullName>Deduct fees for all of my accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>