unpackaged/main/default/objects/Account/fields/IMA_Fee_Disbursement_Deduction_Account__c.field-meta.xml
<CustomField>
    <fullName>IMA_Fee_Disbursement_Deduction_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IMA Fee Disbursement Deduction Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>